Bug 410794: temporary downloads no longer cleaned up at shutdown since they are read-only. r+sr=cbiesinger, a=mtschrep